--- a/src/app/shared/side-menu/side-menu.component.html
+++ b/src/app/shared/side-menu/side-menu.component.html
@@ -23,7 +23,7 @@
 
 <aside
   id="logo-sidebar"
-  class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0"
+  class="fixed top-0 left-0 z-40 w-64 transition-transform -translate-x-full sm:translate-x-0 bg-white md:h-3/4"
   aria-label="Sidebar"
 >
   <div class="h-full px-3 py-4 overflow-y-auto bg-purple-100 dark:bg-gray-950">
@@ -47,6 +47,27 @@
       </li>
       }
     </ul>
+    <div
+      id="dropdown-cta"
+      class="p-4 mt-6 rounded-lg bg-gray-400 dark:bg-white"
+      role="alert"
+    >
+      <p class="mb-3 font-bold text-sm dark:text-blue-400">
+        Publica tu creación
+      </p>
+      <p class="mb-3 text-sm dark:text-blue-400">
+        Publica o promociona tus productos en vivo
+      </p>
+      <div class="flex items-center mb-3">
+        <button
+          type="button"
+          class="w-full text-red-700 bg-white hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900"
+        >
+          Tu sala
+          <div class="bg-red-700 rounded-full w-4 h-4"></div>
+        </button>
+      </div>
+    </div>
   </div>
 </aside>
 
