--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,18 +1,23 @@
-<nav class="bg-white border-gray-200 dark:bg-gray-900">
+<nav class="bg-purple-200 border-gray-200 dark:bg-gray-800">
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
-    <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img
-        src="./assets/svg/IsotipoTynbiz.svg"
-        class="h-8"
-        alt="Flowbite Logo"
-      />
-      <span
-        class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-        >Tynbiz</span
+    <div class="position- absolute right-14">
+      <button
+        type="button"
+        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
       >
-    </a>
+        Solicitar Tymbiz
+      </button>
+      <button
+        (click)="openModal()"
+        type="button"
+        class="py-2.5 px-5 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
+      >
+        Identificate
+      </button>
+    </div>
+
     <div
       class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse"
     >
@@ -91,3 +96,7 @@
     ></div>
   </div>
 </nav>
+
+<app-modal [isOpen]="isLogin" (closeModal)="closeModal()">
+  <app-login></app-login>
+</app-modal>
