--- a/src/app/shared/side-menu/side-menu.component.html
+++ b/src/app/shared/side-menu/side-menu.component.html
@@ -61,7 +61,7 @@
       <div class="flex items-center mb-3">
         <button
           type="button"
-          class="w-full text-red-700 bg-white hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900"
+          class="w-full flex justify-evenly text-red-700 bg-white hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900"
         >
           Tu sala
           <div class="bg-red-700 rounded-full w-4 h-4"></div>
