--- a/src/app/pages/shopper/creations/creations.component.html
+++ b/src/app/pages/shopper/creations/creations.component.html
@@ -5,6 +5,6 @@
   </div>
   <tyn-search (valueSearch)="valueSearch($event)" />
   <div class="mt-6">
-    <tyn-offer-card [listOffer]="cardCrea" />
+    <tyn-creation-card [listCreation]="cardCrea" />
   </div>
 </div>
