--- a/src/app/pages/shopper/offer/offer.component.html
+++ b/src/app/pages/shopper/offer/offer.component.html
@@ -6,6 +6,6 @@
     </p>
   </div>
   <div class="mt-6">
-    <tyn-offer-card [listOffer]="cardOffer" />
+    <tyn-creation-card [listCreation]="cardOffer" />
   </div>
 </div>
