--- a/src/app/pages/admin/panel-page/panel-page.component.html
+++ b/src/app/pages/admin/panel-page/panel-page.component.html
@@ -1,1 +1,196 @@
-<p>panel-page works!</p>,
+<div class="flex flex-col min-h-screen p-6">
+  <div class="grid grid-cols-1 sm:grid-cols-3 ">
+    <div
+      class="m-2 sm:col-span-1  bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+      <div class="relative overflow-x-auto ">
+        <div class="flex items-center  m-6 justify-between mb-4">
+          <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Roles creados</h5>
+          <a href="#" class="text-sm font-medium text-purple-600 hover:underline dark:text-purple-500">
+            Ver roles
+          </a>
+        </div>
+        <div class="relative overflow-x-auto m-6">
+          <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+            <thead class="text-xs text-gray-900 uppercase dark:text-gray-400">
+              <tr>
+                <th scope="col" class=" py-3">
+                  Roles
+                </th>
+                <th scope="col" class=" py-3">
+                  Cant. Us
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="bg-white  border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200">
+                <td class=" py-4">
+                  SuperUsuario
+                </td>
+                <td class=" py-4">
+                  02 usuarios
+                </td>
+              </tr>
+              <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200">
+                <td  class=" py-4">
+                  Administrador
+                </td>
+                <td class=" py-4">
+                  03 usuarios
+                </td>
+              </tr>
+              <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200">
+                <td class=" py-4">
+                  Empleado
+                </td>
+                <td class=" py-4">
+                  04 usuarios
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div
+      class=" m-2 sm:col-span-2  bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+      <div class="relative overflow-x-auto ">
+        <div class="flex items-center  m-6 justify-between mb-4">
+          <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Ultimas acciones de usuarios</h5>
+          <a href="#" class="text-sm font-medium text-purple-600 hover:underline dark:text-purple-500">
+            Ver todas las acciones
+          </a>
+        </div>
+        <div class="relative overflow-x-auto m-6">
+          <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+            <thead class="text-xs text-gray-900 uppercase dark:text-gray-400">
+              <tr>
+                <th scope="col" class=" py-3">
+                  Nombre rol
+                </th>
+                <th scope="col" class=" py-3">
+                  Fecha
+                </th>
+                <th scope="col" class=" py-3">
+                  Acción
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="bg-white  border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200">
+                <th scope="row" class=" py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                  Super Admin
+                </th>
+                <td class=" py-4">
+                  Hace 30 min.
+                </td>
+                <td class=" py-4">
+                  Usuario Juan ha iniciado sesión
+                </td>
+              </tr>
+              <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200">
+                <th scope="row" class=" py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                  Super Admin
+                </th>
+                <td class=" py-4">
+                  Hace 30 min.
+                </td>
+                <td class=" py-4">
+                  Usuario Juan ha iniciado sesión
+                </td>
+              </tr>
+              <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200">
+                <th scope="row" class=" py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                  Super Admin
+                </th>
+                <td class=" py-4">
+                  Hace 30 min.
+                </td>
+                <td class=" py-4">
+                  Usuario Juan ha iniciado sesión
+                </td>
+              </tr>
+               <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200">
+                <th scope="row" class=" py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                  Super Admin
+                </th>
+                <td class=" py-4">
+                  Hace 30 min.
+                </td>
+                <td class=" py-4">
+                  Usuario Juan ha iniciado sesión
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="grid grid-cols-1 sm:grid-cols-2">
+    <div class="m-2 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+<div class="relative overflow-x-auto ">
+        <div class="flex items-center  m-6 justify-between mb-4">
+          <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Usuarios conectados</h5>
+          <a href="#" class="text-sm font-medium text-purple-600 hover:underline dark:text-purple-500">
+            Ver todos los usuarios
+          </a>
+        </div>
+        <div class="relative overflow-x-auto m-6">
+          <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+            <thead class="text-xs text-gray-900 uppercase dark:text-gray-400">
+              <tr>
+                <th scope="col" class=" py-3">
+                  Usuario
+                </th>
+                <th scope="col" class=" py-3">
+                  Rol
+                </th>
+                <th scope="col" class=" py-3">
+                  Fecha registro
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="bg-white  border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200">
+                <th scope="row" class=" py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                  Juan Lujan Soto
+                </th>
+                <td class=" py-4">
+                  Super Admin
+                </td>
+                <td class=" py-4">
+                  24 Jun 2023, 6:35 PM
+                </td>
+              </tr>
+              <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200">
+               <th scope="row" class=" py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                  Juan Lujan Soto
+                </th>
+                <td class=" py-4">
+                  Super Admin
+                </td>
+                <td class=" py-4">
+                  24 Jun 2023, 6:35 PM
+                </td>
+              </tr>
+
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="m-2 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+<div class="relative overflow-x-auto ">
+        <div class="flex items-center  m-6 justify-between mb-4">
+          <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Ganancias</h5>
+          <a href="#" class="text-sm font-medium text-purple-600 hover:underline dark:text-purple-500">
+            Ver ganancias
+          </a>
+        </div>
+        <div class="relative overflow-x-auto m-6">
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
