--- a/src/app/shared/side-menu/side-menu.component.html
+++ b/src/app/shared/side-menu/side-menu.component.html
@@ -23,7 +23,7 @@
 
 <aside
   id="logo-sidebar"
-  class="fixed top-0 left-0 z-40 w-64 transition-transform -translate-x-full sm:translate-x-0 bg-white md:h-3/4"
+  class="fixed top-0 left-0 z-40 w-64 transition-transform -translate-x-full sm:translate-x-0 bg-white"
   aria-label="Sidebar"
 >
   <div class="h-full px-3 py-4 overflow-y-auto bg-purple-100 dark:bg-gray-950">
