--- a/src/app/shared/side-menu/side-menu.component.html
+++ b/src/app/shared/side-menu/side-menu.component.html
@@ -35,7 +35,7 @@
       />
     </a>
     <ul class="space-y-2 font-medium">
-      @for (menu of menuItems; track menu.name) {
+      @for (menu of menuAdmin; track menu.name) { @if (menu.route.length >= 2) {
       <li>
         <a
           [routerLink]="menu.route"
@@ -45,7 +45,59 @@
           <span class="ms-3">{{ menu.name }}</span>
         </a>
       </li>
-      }
+      } @else {
+      <li>
+        <button
+          type="button"
+          class="flex items-center w-full p-2 text-base text-gray-900 transition duration-75 rounded-lg group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
+          [attr.aria-controls]="menu.id"
+          [attr.data-collapse-toggle]="menu.id"
+        >
+          <svg
+            class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 group-hover:text-gray-900 dark:text-gray-400 dark:group-hover:text-white"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 18 21"
+          >
+            <path
+              d="M15 12a1 1 0 0 0 .962-.726l2-7A1 1 0 0 0 17 3H3.77L3.175.745A1 1 0 0 0 2.208 0H1a1 1 0 0 0 0 2h.438l.6 2.255v.019l2 7 .746 2.986A3 3 0 1 0 9 17a2.966 2.966 0 0 0-.184-1h2.368c-.118.32-.18.659-.184 1a3 3 0 1 0 3-3H6.78l-.5-2H15Z"
+            />
+          </svg>
+          <span
+            class="flex-1 ms-3 text-left rtl:text-right whitespace-nowrap"
+            >{{ menu.name }}</span
+          >
+          <svg
+            class="w-3 h-3"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 10 6"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="m1 1 4 4 4-4"
+            />
+          </svg>
+        </button>
+        <ul [id]="menu.id" class="hidden py-2 space-y-2">
+          @for (item of menu.children; track item.name) {
+          <li>
+            <a
+              [routerLink]="item.route"
+              class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
+            >
+              <span class="ms-3">{{ item.name }}</span>
+            </a>
+          </li>
+          }
+        </ul>
+      </li>
+      } }
     </ul>
     <div
       id="dropdown-cta"
