--- a/src/app/shared/side-menu/side-menu.component.html
+++ b/src/app/shared/side-menu/side-menu.component.html
@@ -39,7 +39,7 @@
       <li>
         <a
           [routerLink]="menu.route"
-          class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
+          class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-purple-500 dark:hover:bg-gray-700 group"
         >
           <i [class]="menu.icon"></i>
           <span class="ms-3">{{ menu.name }}</span>
@@ -49,7 +49,7 @@
       <li>
         <button
           type="button"
-          class="flex items-center w-full p-2 text-base text-gray-900 transition duration-75 rounded-lg group hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700"
+          class="flex items-center w-full p-2 text-base text-gray-900 transition duration-75 rounded-lg group hover:bg-purple-500 dark:text-white dark:hover:bg-gray-700"
           [attr.aria-controls]="menu.id"
           [attr.data-collapse-toggle]="menu.id"
         >
@@ -89,7 +89,7 @@
           <li>
             <a
               [routerLink]="item.route"
-              class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
+              class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-purple-500 dark:hover:bg-gray-700 group"
             >
               <span class="ms-3">{{ item.name }}</span>
             </a>
