--- a/src/app/components/creation-card/creation-card.component.html
+++ b/src/app/components/creation-card/creation-card.component.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
+<div class="grid grid-cols-1 gap-4 sm:grid-cols-2 z-40">
   @for (listCreation of listCreation(); track listCreation.id) {
   <a
     class="block bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
@@ -156,16 +156,24 @@
   </a>
   }
 </div>
+@if (isModalOpen()) {
+  <div
+  class="fixed inset-0 bg-black opacity-50 z-40"
+  (click)="closeModal()"
+>
+</div>
+}
 
 <!-- Modal Right -->
 <div
   id="top-right-modal"
   data-modal-placement="top-right"
   tabindex="-1"
-  class="fixed top-0 z-50 w-full overflow-x-hidden overflow-y-auto max-w-lg m-4 shadow-lg right-0 h-[calc(100%-1rem)] max-h-full"
+  class="fixed top-0 left-0 right-0 z-50 flex w-full overflow-x-hidden overflow-y-auto justify-end max-h-full shadow-lg"
   [ngClass]="isModalOpen() ? 'block' : 'hidden'"
+
 >
-  <div class="relative w-full max-w-lg max-h-full">
+  <div class="relative w-full max-w-lg max-h-full my-4 ">
     <!-- Modal content -->
     <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700">
       <!-- Modal header -->
