--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -71,17 +71,23 @@
   </form>
   <div class="relative z-0"></div>
 </div>
-
+@if (isModalOpen()) {
+  <div
+  class="fixed inset-0 bg-black opacity-50 z-40"
+  (click)="closeModal()"
+>
+</div>
+}
 <!-- Main modal -->
 <div
   id="default-modal"
   data-modal-backdrop="static"
   tabindex="-1"
   aria-hidden="true"
-  class="overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full"
+  class="overflow-y-auto overflow-x-hidden fixed flex top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full"
   [ngClass]="isModalOpen() ? 'block' : 'hidden'"
 >
-  <div class="relative p-4 w-full max-w-2xl max-h-full">
+  <div class="relative p-4 w-full max-w-lg max-h-full">
     <!-- Modal content -->
     <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700">
       <!-- Modal header -->
@@ -173,20 +179,20 @@
             </select>
           </div>
         </div>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+        <div class="grid grid-cols-2 gap-4">
           @for (category of categorys; track category.id) {
           <div
-            class="grid grid-cols-12 border rounded-xl w-full py-5"
+            class="grid grid-cols-12 border-2  bg-purple-200 rounded-xl w-full p-4"
             [ngClass]="{
-              'border-red-800 dark:border-gray-500 border-2':
+              'border-purple-800 dark:border-gray-500':
                 category.state === true,
-              'border-white dark:border-black border-2':
+              'border-purple-200':
                 category.state === false
             }"
             (click)="selectCategory(category)"
           >
-            <div class="pl-10 col-span-10">
-              <p class="text-2xl font-semibold">{{ category.nombre }}</p>
+            <div class="col-span-10">
+              <p class="text-base font-semibold">{{ category.nombre }}</p>
               <p class="text-2xs">{{ category.cant }} tiendas</p>
             </div>
             <i class="fa fa-house col-span-2 m-auto"></i>
@@ -196,22 +202,23 @@
       </div>
       <!-- Modal footer -->
       <div
-        class="flex items-center p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600"
+        class="flex items-center justify-end p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600"
       >
+
         <button
+          data-modal-hide="default-modal"
+          type="button"
+          class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-purple-300 hover:bg-purple-200 hover:text-purple-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
+        >
+          Cancelar
+        </button>
+         <button
           data-modal-hide="default-modal"
           type="button"
           (click)="selectCategoryData()"
-          class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+          class="text-white bg-purple-700 ml-4 hover:bg-purple-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-800"
         >
-          Aceptar
-        </button>
-        <button
-          data-modal-hide="default-modal"
-          type="button"
-          class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
-        >
-          Salir
+          Aplicar
         </button>
       </div>
     </div>
