feat: initial login feature

--- a/src/app/pages/admin/request-demo-page/request-demo-page.component.html
+++ b/src/app/pages/admin/request-demo-page/request-demo-page.component.html
@@ -2,7 +2,7 @@
   <div class="flex items-center justify-between pb-4">
     <select
       id="countries"
-      (ngModelChange)="myFuncEnglish2($event)"
+      (ngModelChange)="filterByStatus($event)"
       [(ngModel)]="lang"
       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
     >
@@ -51,26 +51,6 @@
         </td>
       </tr>
       }
-      <tr
-        class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
-      >
-        <th
-          scope="row"
-          class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-        >
-          Microsoft Surface Pro
-        </th>
-        <td class="px-6 py-4">White</td>
-        <td class="px-6 py-4">Laptop PC</td>
-        <td class="px-6 py-4">$1999</td>
-        <td class="px-6 py-4">
-          <a
-            href="#"
-            class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-            >Edit</a
-          >
-        </td>
-      </tr>
     </tbody>
   </table>
   <nav
