--- a/src/app/shared/side-menu/side-menu.component.html
+++ b/src/app/shared/side-menu/side-menu.component.html
@@ -100,6 +100,7 @@
       </li>
       } }
     </ul>
+    @if (this.user?.role !== 'admin') {
     <div
       id="dropdown-cta"
       class="p-4 mt-6 rounded-lg bg-gray-400 dark:bg-white"
@@ -121,6 +122,7 @@
         </button>
       </div>
     </div>
+    }
   </div>
 </aside>
 
