feat: login service add user

--- a/src/app/pages/account/account.component.html
+++ b/src/app/pages/account/account.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="mb-4 border-b border-gray-200 dark:border-gray-700">
+<div class="mb-4 border-b border-gray-200 dark:border-gray-700">
   <ul
     class="flex flex-wrap -mb-px text-sm font-medium text-center"
     id="default-tab"
@@ -50,5 +50,4 @@
   >
     <tyn-security-privacity />
   </div>
-</div> -->
-<app-login />
+</div>
