--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -9,6 +9,7 @@
       >
         Solicitar Tymbiz
       </button>
+      @if (!user) {
       <button
         (click)="openModal()"
         type="button"
@@ -16,6 +17,7 @@
       >
         Identificate
       </button>
+      }
     </div>
 
     @if (user) {
@@ -59,7 +61,7 @@
           <li>
             <a
               (click)="logout()"
-              class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"
+              class="cursor-pointer block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"
               >Cerrar sesión</a
             >
           </li>
