--- a/src/app/pages/admin/planes-suscription-page/planes-suscription-page.component.html
+++ b/src/app/pages/admin/planes-suscription-page/planes-suscription-page.component.html
@@ -1,1 +1,55 @@
-<p>planes-suscription-page works!</p>,
+<div class="relative overflow-x-auto shadow-md px-5 md:px-10">
+  <div class="mb-6 text-gray-900 dark:text-white">
+    <h1 class="text-2xl font-semibold">
+      Plan de suscripción
+    </h1>
+    <p>Planes de suscripción para que las tiendas puedan elegir y vender en la plataforma</p>
+  </div>
+  <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+      <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+        <tr>
+          <th scope="col" class="px-6 py-3">Nombre</th>
+          <th scope="col" class="px-6 py-3">Estado</th>
+          <th scope="col" class="px-6 py-3">Precio</th>
+          <th scope="col" class="px-6 py-3">Tipo</th>
+          <th scope="col" class="px-6 py-3">Promocion</th>
+          <th scope="col" class="px-6 py-3">Descripcion</th>
+          <th scope="col" class="px-6 py-3">Fecha</th>
+          <th scope="col" class="px-6 py-3">Opción</th>
+        </tr>
+      </thead>
+      <tbody>
+        @for (item of planList; track item.id) {
+        <tr
+          class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
+          <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+            {{ item.planName }}
+          </th>
+          <td class="px-6 py-4"
+            [ngClass]="{ 'text-red-500': item.planState === 'inactivo', 'text-green-500': item.planState === 'activo' }">
+            {{ item.planState }}</td>
+          <td class="px-6 py-4">{{ item.planCoin }} {{ item.planPrice }}</td>
+          <td class="px-6 py-4">{{ item.planType }}</td>
+          @if (item.promotional === 'true') {
+          <td class="px-6 py-4 font-medium text-gray-900  whitespace-nowrap dark:text-white"> Por {{ item.promDuration }}
+            días <br> <span class="text-green-600">
+              {{ item.percentage }}% de descuento
+            </span> </td>
+          }@else {
+          <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">---</td>
+          }
+          <td class="px-6 py-4">{{ item.planDescription }}</td>
+          <td class="px-6 py-4">{{ item.planDate }}</td>
+          <td class="px-6 py-4">
+            <button type="button"
+              class="focus:outline-none text-white bg-gray-500 hover:bg-purple-400 hover:cursor-pointer focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-900">
+              Gestionar
+            </button>
+          </td>
+        </tr>
+        }
+      </tbody>
+    </table>
+  </div>
+</div>
