feat: usuarios list

--- a/src/app/pages/admin/panel-page/panel-page.component.html
+++ b/src/app/pages/admin/panel-page/panel-page.component.html
@@ -156,7 +156,7 @@
                   scope="row"
                   class="py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
                 >
-                  {{ userAction.nameRol }}
+                  {{ userAction.rol }}
                 </th>
                 <td class="py-4">
                   {{ userAction.dateAction }}
@@ -210,11 +210,9 @@
                   scope="row"
                   class="py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
                 >
-                  {{ userConect.name }}
+                  {{ userConect.nameUser }}
                 </th>
-                <td class="py-4">
-                  {{ userConect.rol }}
-                </td>
+                <td class="py-4">{{ userConect.rol }}</td>
                 <td class="py-4">
                   {{ userConect.dateAction }}
                 </td>
