--- a/src/app/pages/admin/plan-suscrip-page/plan-suscrip-page.component.html
+++ b/src/app/pages/admin/plan-suscrip-page/plan-suscrip-page.component.html
@@ -42,8 +42,8 @@
           <td class="px-6 py-4">{{ item.starPlan }} a {{ item.endPlan }}</td>
           <td class="px-6 py-4">
             <button type="button"
-              class="focus:outline-none w-40 text-white bg-gray-500 hover:bg-purple-400 hover:cursor-pointer focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-900">
-              Ver periodo de facturacion
+              class="focus:outline-none w-24 text-white bg-gray-500 hover:bg-purple-400 hover:cursor-pointer focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-900">
+              Ver mas
             </button>
           </td>
         </tr>
