--- a/src/app/pages/admin/request-service-page/request-service-page.component.html
+++ b/src/app/pages/admin/request-service-page/request-service-page.component.html
@@ -7,25 +7,6 @@
   </div>
   <!-- Búsqueda general -->
   <div class="xl:flex items-center justify-between grid grid-cols-1 lg:grid-cols-2 pb-4">
-    <div class="relative w-52">
-      <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
-        <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-          fill="none" viewBox="0 0 20 20">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
-        </svg>
-      </div>
-      <input type="text" [(ngModel)]="search" placeholder="Buscar solicitud demo"
-        class="block w-full p-2.5 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-purple-500 focus:border-purple-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500" />
-    </div>
-    <div class="flex items-center">
-      <span class="mx-4 text-gray-500 hidden md:block">Fechas</span>
-      <input type="date" [(ngModel)]="startDate" placeholder="Fecha desde"
-        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500" />
-      <span class="mx-4 text-gray-500">al</span>
-      <input type="date" [(ngModel)]="endDate" placeholder="Fecha hasta"
-        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500" />
-    </div>
     <!-- busqueda por estado -->
     <div class="relative w-52">
       <select id="status" (ngModelChange)="filterByStatus($event)" [(ngModel)]="isState"
@@ -90,8 +71,9 @@
   <div class="flex justify-between">
     <div class="flex my-6 items-center">
       <p class="text-sm text-gray-700">Filas por página: </p>
-      <select [(ngModel)]="itemsPerPage" class="justify-center ml-2 block w-14 py-0 px-2 h-8 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-        <option *ngFor="let option of [5, 10, 15, 20, 50]" [value]="option"> {{ option }}</option>
+      <select [(ngModel)]="itemsPerPage" (ngModelChange)="onItemsPerPageChange($event)"
+        class="justify-center ml-2 block w-14 py-0 px-2 h-8 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+        <option *ngFor="let option of [4, 5, 10, 15, 20, 50]" [value]="option"> {{ option }}</option>
       </select>
     </div>
     <div class="justify-end">
