--- a/src/app/pages/admin/list-role-page/list-role-page.component.html
+++ b/src/app/pages/admin/list-role-page/list-role-page.component.html
@@ -63,7 +63,7 @@
   </div>
 
   <table
-    class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
+    class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 overflow-x-auto"
   >
     <thead
       class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
@@ -90,7 +90,7 @@
           {{ item.name }}
         </th>
         <td class="px-6 py-4">{{ item.description }}</td>
-        <td class="px-6 py-4">{{ item.dateCreate }}</td>
+        <td class="px-6 py-4">{{ item.dateCreate | date : "medium" }}</td>
         <td class="px-6 py-4">
           <span
             class="inline-flex items-center text-xs font-medium px-2.5 py-0.5 rounded-full"
